--- a/Demo/DemoApp/appsettings.json
+++ b/Demo/DemoApp/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Spark": {
+    "RavenDb": {
+      "Urls": [ "http://localhost:8080" ],
+      "Database": "Spark"
+    }
+  }
 }
