--- a/Demo/DemoApp/ClientApp/angular.json
+++ b/Demo/DemoApp/ClientApp/angular.json
@@ -28,17 +28,15 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              },
-              {
-                "glob": "*.woff|*.woff2",
-                "input": "node_modules/bootstrap-icons/font/fonts",
-                "output": "/fonts"
               }
             ],
             "styles": [
               "node_modules/@mintplayer/ng-bootstrap/_bootstrap.scss",
               "src/styles.scss"
-            ]
+            ],
+            "loader": {
+              ".svg": "text"
+            }
           },
           "configurations": {
             "production": {
