Introduce library project

--- a/MintPlayer.Spark/MintPlayer.Spark.csproj
+++ b/MintPlayer.Spark/MintPlayer.Spark.csproj
@@ -8,18 +8,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\MintPlayer.Spark.SourceGenerators\MintPlayer.Spark.SourceGenerators.csproj"
-						  OutputItemType="Analyzer"
-						  ReferenceOutputAssembly="false" />
+		<ProjectReference Include="..\MintPlayer.Spark.SourceGenerators\MintPlayer.Spark.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MintPlayer.SourceGenerators" Version="10.7.0">
+		<PackageReference Include="MintPlayer.SourceGenerators" Version="10.15.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="MintPlayer.SourceGenerators.Attributes" Version="10.7.0" GeneratePathProperty="true" />
-		<PackageReference Include="RavenDB.Client" Version="6.2.6" />
+		<PackageReference Include="MintPlayer.SourceGenerators.Attributes" Version="10.15.0" GeneratePathProperty="true" />
+		<PackageReference Include="RavenDB.Client" Version="7.1.5" />
 	</ItemGroup>
 
 	<ItemGroup>
