--- a/Demo/DemoApp/DemoApp.csproj
+++ b/Demo/DemoApp/DemoApp.csproj
@@ -12,15 +12,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
-		<PackageReference Include="MintPlayer.AspNetCore.SpaServices" Version="10.0.1" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+		<PackageReference Include="MintPlayer.AspNetCore.SpaServices" Version="10.2.1" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\DemoApp.Library\DemoApp.Library.csproj" />
 		<ProjectReference Include="..\..\MintPlayer.Spark\MintPlayer.Spark.csproj" />
-		<ProjectReference Include="..\..\MintPlayer.Spark.SourceGenerators\MintPlayer.Spark.SourceGenerators.csproj"
-						  OutputItemType="Analyzer"
-						  ReferenceOutputAssembly="false" />
+		<ProjectReference Include="..\..\MintPlayer.Spark.SourceGenerators\MintPlayer.Spark.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<!-- Angular build during publish -->
