--- a/MintPlayer.Spark.Abstractions/MintPlayer.Spark.Abstractions.csproj
+++ b/MintPlayer.Spark.Abstractions/MintPlayer.Spark.Abstractions.csproj
@@ -4,6 +4,18 @@
 		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+
+		<!-- NuGet Package Metadata -->
+		<PackageId>MintPlayer.Spark.Abstractions</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>MintPlayer</Authors>
+		<Company>MintPlayer</Company>
+		<Description>Abstractions and shared models for MintPlayer.Spark low-code framework.</Description>
+		<PackageTags>low-code;framework;ravendb;abstractions</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/MintPlayer/MintPlayer.Spark</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/MintPlayer/MintPlayer.Spark.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
 
 </Project>
