--- a/MintPlayer.Spark.Abstractions/MintPlayer.Spark.Abstractions.csproj
+++ b/MintPlayer.Spark.Abstractions/MintPlayer.Spark.Abstractions.csproj
@@ -7,7 +7,7 @@
 
 		<!-- NuGet Package Metadata -->
 		<PackageId>MintPlayer.Spark.Abstractions</PackageId>
-		<Version>1.0.0</Version>
+		<Version>10.0.0-preview.1</Version>
 		<Authors>MintPlayer</Authors>
 		<Company>MintPlayer</Company>
 		<Description>Abstractions and shared models for MintPlayer.Spark low-code framework.</Description>
