--- a/MintPlayer.Spark.SourceGenerators/MintPlayer.Spark.SourceGenerators.csproj
+++ b/MintPlayer.Spark.SourceGenerators/MintPlayer.Spark.SourceGenerators.csproj
@@ -11,8 +11,8 @@
 
         <!-- NuGet Package Metadata -->
         <PackageId>MintPlayer.Spark.SourceGenerators</PackageId>
-        <Version>1.0.0</Version>
-        <Authors>MintPlayer</Authors>
+		<Version>10.0.0-preview.1</Version>
+		<Authors>MintPlayer</Authors>
         <Company>MintPlayer</Company>
         <Description>Source generators for MintPlayer.Spark low-code framework. Auto-generates DI registration for Actions classes.</Description>
         <PackageTags>low-code;framework;source-generator;roslyn</PackageTags>
