--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@angular/common": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@mintplayer/ng-bootstrap": "^21.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   }
