--- a/packages/ng-spark-auth/package.json
+++ b/packages/ng-spark-auth/package.json
@@ -7,6 +7,7 @@
     "@angular/common": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@mintplayer/ng-bootstrap": "^21.0.0",
     "rxjs": "~7.8.0"
   },
   "sideEffects": false
