--- a/Demo/HR/HR/ClientApp/package.json
+++ b/Demo/HR/HR/ClientApp/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^21.0.0",
     "@mintplayer/ng-animations": "^21.0.0",
     "@mintplayer/ng-bootstrap": "^21.0.0",
+    "@mintplayer/ng-spark-auth": "^0.0.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
